# mongo

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelrc.common_bes  .bazelrc.fuzztest  .bazelrc.local.example  .bazelrc.target_mongo_version  .bazelversion  .clang-format  .clang-tidy  .clang-tidy-extra-checks  .clang-tidy.in  .clangd  .cproject  .cvsignore  .editorconfig  .eslintignore  .eslintrc.yml  .gdbinit  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .lldbinit  .mypy.ini  .prettierignore  .prettierrc  .private_modules  .project  .pydocstyle  .pylintrc  .resmoke_start_time.yml  .style.yapf  .udbinit  1268.pl  AGENTS.md  APACHE-2.0.txt  AUTHORS  (+109 more)
api/leveldb/: Makefile.am  hyper_wt.cc  leveldb_test.cc  leveldb_wt.cc  leveldb_wt.h  rocks_wt.cc
bazel/: BUILD.bazel  BUILD.pigz  OWNERS.yml  README.md  bazelisk.py  bzlmod.bzl  cargo_bindeps.toml  crates.toml  devprod_build_aliases.yml  gpg_signer.py  header_deps.bzl  hello_world.py  lint.sh  merge_tidy_configs.py  mongo_js_rules.bzl  mongo_script_rules.bzl  mongo_src_rules.bzl  run_under_working_dir.sh  scons_link_list.py  separate_debug.bzl  signing.bzl  test_exec_properties.bzl  test_exec_properties_test.bzl  test_wrapper.sh  transitions.bzl  utils.bzl  workspace_status.py  wrapper_hook.py
bazel/_openssl_placeholder_for_grpc/: .placeholder
bazel/auto_header/: BUILD.bazel  _ah_placeholder.h  auto_header.bzl  auto_header.py  ensure_fd.py  gen_all_headers.py
bazel/build_bazel/: build_bazel.py
bazel/compiledb/: compiledb_aspect.bzl
bazel/config/: BUILD.bazel  configs.bzl  generate_config_header.bzl  generate_config_header.py  mongo_config_header.bzl  python_genrule.bzl  render_template.bzl
bazel/coverity/: BUILD.bazel  coverity_toolchain.bzl  generate_coverity_command.py  generate_coverity_targets.py  repositories.bzl
bazel/db_contrib_tool/: BUILD.bazel  db_contrib_tool.bzl  db_contrib_tool.sh
bazel/docs/: best_practices.md  developer_workflow.md  engflow_credential_setup.md  header_cycle_resolution.md  rbe_images.md  toolchain.md
bazel/format/: BUILD.bazel  format.py  rules_lint_format_wrapper.py  shfmt.bzl
bazel/gpg/: gpg.bzl
bazel/install_rules/: BUILD.bazel  bolt.bzl  install_rules.bzl  install_rules.py  msi.bzl  pigz.bzl  pretty_printer_test_creator.py  pretty_printer_tests.bzl  providers.bzl  windows_msvc.bzl  zstd.bzl
bazel/mongot_extension_signing_key/: generate_embedded_public_key_header.py  mongot_extension_signing_key.bzl
bazel/remote_execution_container/: BUILD.bazel  (+3 more)
build_posix/: .cvsignore  AUTHORS  Make.base  Make.subdirs  configure.ac  configure.ac.in  makemake  reconf  wiredtiger.pc.in
buildscripts/: .pydocstyle  .pylintrc  .style.yapf  BUILD.bazel  Dockerfile  OWNERS.yml  __init__.py  aggregate_tracefiles.py  antithesis_suite.py  append_result_tasks.py  apply_clang_tidy_fixes.py  archive_artifacts.py  auto_install_db_contrib_tool.sh  aws_ec2.py  backports_required_for_multiversion_tests_deduplicator.py  bazel_burn_in.py  bazel_custom_formatter.py  bazel_local_resources.py  bazel_scons_diff.py  bazel_spawn_pb2.py  bb.py  bcp.py  benchmark_profiler.py  benchmark_tools.py  blackduck_hub.py  bongosymb.py  build_and_test_client.py  build_cargo_bazel_ppc64le.sh  build_system_options.py  buildboost.bat  buildboost64.bat  buildifier.py  buildlogger.py  burn_in_tags.py  burn_in_tags_bypass_compile_and_fetch_binaries.py  burn_in_tests.py  burn_in_tests_multiversion.py  bypass_compile_and_fetch_binaries.py  calculate_tooling_metrics.py  candle_wrapper.py  (+203 more)
distsrc/: BUILD.bazel  LICENSE-Community.txt  LICENSE.OpenSSL  README  THIRD-PARTY-NOTICES
etc/: BUILD.bazel  OWNERS.yml  asan.denylist  backports_required_for_multiversion_tests.yml  burn_in_tests.yml  cloud_nightly.yml  code_lockdown.yml  coverity.yml  coverity_config_schema.json  coverity_parse_warnings.conf  dev_evergreen.yml  distributed_correctness.yml  drivers_nightly.yml  evergreen-pebt.yml  evergreen-rocksdb.yml  evergreen.yml  evergreen_lint.yml  evergreen_nightly.yml  evergreen_timeouts.yml  expansions.default.yml  extensions.yml  format_sample.cpp  gdb_init  generate_subtasks_config.yml  iwyu_mapping.imp  log_redaction.audit  longevity.yml  lsan.suppressions  macos_dev_entitlements.xml  macos_entitlements.xml  macos_mongodb.plist  olsen_time_zones.yml  override.json  perf.yml  performance_thresholds.yml  query.yml  repo_config.yaml  repo_config_test.yaml  set_up_workstation.sh  setup_multiversion_config.yml  (+14 more)
evergreen/: BUILD.bazel  OWNERS.yml  activate_task.py  antithesis_base_image_build_and_push.sh  antithesis_config_image_build_and_push.sh  antithesis_config_image_test.sh  antithesis_dry_run.sh  antithesis_image_build.sh  antithesis_image_build_and_push.sh  antithesis_image_push.sh  bazel.sh  bazel_RBE_supported.sh  bazel_compile.sh  bazel_coverage.sh  bazel_evergreen_shutils.sh  bazel_evergreen_shutils_test.sh  bazel_get_binary_path.sh  bazel_run.sh  bazel_scons_diff.sh  bazel_test.sh  bazel_test_results_shutils.sh  bazel_utility_functions.sh  blackduck_hub.sh  blackduck_setup.sh  build_and_push_module_images.sh  build_metric_cedar_report.py  burn_in_tests.sh  burn_in_tests_generate.sh  burn_in_tests_multiversion.sh  check_compile_variant.sh  check_idl_compat.sh  check_legacy_command_types.sh  check_resmoke_failure.sh  check_run_tests_infrastructure_failure.sh  check_workstation_setup.sh  cleanup_environment.sh  cleanup_fuse_watchdog.sh  collect_bazel_debug_logs.sh  collect_bazel_jvm_dump.sh  commit_message_validate.sh  (+200 more)
modules_poc/: BUILD.bazel  OWNERS.yml  README.md  browse.py  cindex.py  cpp-highlights.scm  merge_decls.py  mod_diff.py  mod_mapping.py  mod_scanner.bzl  mod_scanner.py  modules.yaml  needs_replacement.jq  no_longer_public.jq  other_team_use_replacement.jq  private_headers.py  private_headers.sh  upload.py  util.jq
src/: BUILD.bazel  SConscript  SConscript.client  mongodb.sln  shim_crt.cpp  shim_cxx.cpp  vs2010_mongodb_sm.sln
x509/: BUILD.bazel  README  apple-certs.yml  apple_certs.json  apple_certs_def.bzl  certs.yml  generate_certificates.bzl  main_certs_def.bzl  mkcert.py
(+56261 files in other folders)
